--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-install": "npm install --legacy-peer-deps"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
@@ -14,8 +15,8 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "14.2.20",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-image-lightbox": "^5.1.4",
     "sharp": "^0.33.5",
     "tailwind-merge": "^3.0.2",
